Adding rest controller for extracting data